--- a/app/src/main/res/layout/portfolio_rowlayout.xml
+++ b/app/src/main/res/layout/portfolio_rowlayout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/portfolio_row_image"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:scaleType="matrix"
+        android:scaleType="centerCrop"
         android:src="@drawable/ratiologo" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
