--- a/app/src/main/res/layout/fragment_add_new.xml
+++ b/app/src/main/res/layout/fragment_add_new.xml
@@ -105,13 +105,13 @@
                 android:text="STATUS"
                 android:textSize="12sp"
                 android:layout_margin="10dp"/>
-            <Button
-                android:id="@+id/addnew_button_projectstatus"
+
+            <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
+                android:id="@+id/addnew_spinner_status"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@drawable/button_bg"
-                android:textColor="@android:color/white"
-                android:text="Project status"/>
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:hintText="Status" />
 
         </LinearLayout>
         <View
