--- a/app/src/main/res/layout/portfolio_rowlayout.xml
+++ b/app/src/main/res/layout/portfolio_rowlayout.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ratiologo" />
+        app:srcCompat="@drawable/ratiologo" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
