--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
         android:title="Manage Users"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_reports"
+        android:orderInCategory="100"
+        android:title="Show reports"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
