--- a/app/src/main/res/layout/activity_reports.xml
+++ b/app/src/main/res/layout/activity_reports.xml
@@ -95,7 +95,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="TOTAL INCOME"
+                android:hint="AVERAGE INCOME"
                 android:enabled="false"/>
         </com.google.android.material.textfield.TextInputLayout>
 
