--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,17 +6,20 @@
         android:id="@+id/action_manage"
         android:orderInCategory="100"
         android:title="Manage Users"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_people"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_reports"
         android:orderInCategory="100"
         android:title="Show reports"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_insert_chart"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_settings"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/action_clearlocal"
